# RTWBS

./: .gitignore  BenchmarkGenerator.py  CMakeLists.txt  INTEGRATION_EXAMPLE_README.md  Makefile  README.md  analyze_results.py  generate_benchmarks.py  requirements.txt  setup.sh
ASTRail_analysis_output/: summary_statistics.txt
FMICS_analysis_output/: summary_statistics.txt
assets/: system_size.csv
assets/ASTRail/ISOLA2018/: MovBlock.xml
assets/FMICS2021/: fischer.xml  identical_test.xml  modelFastVerification.xml
assets/SugarBeetField/: RTWBS_Refinement_Analysis.md  UniqueDrone.xml  UniqueDroneAbstract.xml  UniqueDroneRefined.xml  sugarBeetFieldAbstract.xml  sugarBeetFieldRefined.xml
assets/eval/: l_1.xml  l_3.xml  l_5.xml  m_1.xml  m_3.xml  m_5.xml  s_1.xml  s_3.xml  s_5.xml  xl_1.xml  xl_3.xml  xl_5.xml  xxl_1.xml  xxl_3.xml  xxl_5.xml
assets/example/: assignments_tau.xml  dbm_operations.xml  rtwbs_example.xml  weak_successors.xml
assets/unit_tests/: fischer.xml  test01_simple_sequential.xml  test02_multi_clock.xml  test03_basic_sync.xml  test08_dense_clocks.xml  test09_cyclic_resets.xml  test10_stress_test.xml
benchmark/: run_ASTRail.cpp  run_FMICS2021.cpp  run_SugarBeet.cpp  run_all.cpp  run_synthetic.cpp
cmake/: RTWBSConfig.cmake.in
doc/: README.md  main.aux  main.out  main.tex  main.toc
doc/src/: 01_dbm.tex  02_time_elapse.tex  03_zone_graph.tex  04_rtwbs_theory.tex  05_game_algorithm.tex  06_mapping_code.tex  07_future_work.tex
example/: assignments_as_tau_example.cpp  dbm_example.cpp  debug_test9.cpp  integration_example.cpp  integration_example_2.cpp  minimal_test.cpp  parse_generated_benchmark.cpp  railway_example  railway_example.cpp  rtwbs_equivalence_example.cpp  rtwbs_example.cpp  run_automata.cpp  run_unit_tests.cpp  run_uppaal_benchmarks.cpp  simple_example  simple_example.cpp  simple_sync_test.cpp  single_transition_test.cpp  synchronization_example.cpp  system_rtwbs_example.cpp  test_example  test_example.cpp  unit_test_example.cpp  utap_example.cpp  weak_successors_example.cpp  zone_graph_example.cpp  zonegraph_example  zonegraph_example.cpp
include/: rtwbs.h
include/rtwbs/: configs.h  context.h  core.h  macros.h  threadpool.h  timedautomaton.h  utils.h
include/rtwbs/benchmarks/: common.h
old/: rtwbs.cpp
results/analysis/: comparison_memory.pgf  comparison_speedup.pgf  comparison_time.pgf  ratios.csv  results_table.tex
results/rtbws_openmp/: syn_benchmark_results_20250929_020000.csv
results/rtwbs/: syn_benchmark_results_20250929_005237.csv
results/upp_bench/: results_2025-09-29_09-24-40.csv
scripts/: compare_results.py  generate_benchmarks.py  get_sizes.py  test.py  uppaal_benchmark.py
src/: context.cpp  core.cpp  rtwbs.cpp  rtwbs.h  system.cpp  system.h  timedautomaton.cpp  timedautomaton.h  utils.h
src/benchmarks/: common.cpp
unit_tests/: test04_complex_states.xml  test05_multi_channel.xml  test06_rtwbs_receiver.xml  test07_rtwbs_sender.xml
